# bayeoptimization

./: .gitignore  CLAUDE.md  jest.config.ts  package-lock.json  package.json  pyproject.toml
app/: package-lock.json  package.json  server.js
app/public/: index.html
app/src/engine/: activeLearning.js  adversarialLab.js  bayesianOptimizer.js  driftDetector.js  evidentialLearning.js
src/: __init__.py
src/active/: __init__.py  drift.py  learner.py
src/evidential/: __init__.py  classifier.py  fusion.py  openset.py  regressor.py
src/integrations/: __init__.py  mlflow_tracker.py  otel_tracer.py  prometheus_metrics.py
src/optimization/: __init__.py  bayesian.py  prime_bo.py
src/security/: __init__.py  adversarial.py  confusion_defense.py  fn_hardening.py
src/server/: app.ts  test_functions.ts  tsconfig.json  ws_handler.ts
tests/: conftest.py  test_active.py  test_evidential.py  test_integrations.py  test_optimization.py  test_security.py  test_server.ts
zkaedi-prime-package/: .gitignore  CHANGELOG.md  COMPLETE_FILE_LIST.md  CONTRIBUTING.md  DEEP_DIVE_ANALYSIS.md  DEEP_DIVE_SUMMARY.md  FILE_LIST.txt  FILE_TREE.txt  FINAL_CHECKLIST.md  FOLDER_STRUCTURE.md  IMPLEMENTATION_NOTES.md  LICENSE  PACKAGE_SUMMARY.md  PHASE1_SUMMARY.md  PUBLISH.md  README.md  VERIFICATION_CHECKLIST.md  build_output.txt  jest.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
zkaedi-prime-package/examples/: bayesianOptimization.ts  evidentialLearning.ts
zkaedi-prime-package/scripts/: verify.ts
zkaedi-prime-package/src/: index.ts
(+38 files in other folders)
